@@ -52,15 +52,15 @@ class Siteinfo extends \Zotlabs\Web\Controller {
 			'$tag' => $tag,
 			'$polled' => t('Last background fetch: '),
 			'$lastpoll' => get_poller_runtime(),
-			'$load_average' => t('Current load average: '),
+			// '$load_average' => t('Current load average: '),
 			'$loadavg_all' => $loadavg[0] . ', ' . $loadavg[1] . ', ' . $loadavg[2],		
 			'$commit' => $commit,
 			'$web_location' => t('Running at web location') . ' ' . z_root(),
-			'$visit' => t('Please visit <a href="http://hubzilla.org">hubzilla.org</a> to learn more about $Projectname.'),
+			'$visit' => t('Please visit <a href="https://blablanet.org">hubzilla.org</a> to learn more about $Projectname.'),
 			'$bug_text' => t('Bug reports and issues: please visit'),
-			'$bug_link_url' => 'https://github.com/redmatrix/hubzilla/issues',
+			'$bug_link_url' => 'https://geditlab.com/blablanet/blablanet-addons/issues',
 			'$bug_link_text' => t('$projectname issues'),
-			'$contact' => t('Suggestions, praise, etc. - please email "redmatrix" at librelist - dot com'),
+			'$contact' => t('Suggestions, praise, etc. - please email "blablanet" at blablanet - dot com'),
 			'$donate' => $donate,
 			'$adminlabel' => t('Site Administrators'),
 			'$admininfo' => $admininfo,
